:recycle: refactor: move Centroid processing from controller to service layer