@@ -4,7 +4,6 @@ import com.kok.kokcore.station.domain.entity.Route;
 import com.kok.kokcore.station.domain.entity.Station;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public record RecommendedStationResponse(
 
@@ -13,7 +12,7 @@ public record RecommendedStationResponse(
 ) {
     public static RecommendedStationResponse of(Station station, List<Route> routes) {
         return new RecommendedStationResponse(
-                routes.stream().map(Route::getName).collect(Collectors.toList()),
+                routes.stream().map(Route::getName).toList(),
                 station
         );
     }
